kubernetes/apps/app-cluster/productivity/sterling-pdf/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sterling-pdf
  namespace: productivity
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pdf.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
    gethomepage.dev/description: "PDF editor and manipulation tool"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - productivity"
    gethomepage.dev/href: "https://pdf.krapulax.dev"
    gethomepage.dev/icon: "stirling-pdf.png"
    gethomepage.dev/name: "Sterling PDF"
    gethomepage.dev/weight: "30"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - pdf.krapulax.dev
  rules:
    - backendRefs:
        - name: sterling-pdf
          namespace: productivity
          port: 80
